kubernetes/argocd/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/hotio/qbittorrent:latest
          ports:
          - name: qbittorrent-tcp
            containerPort: 8080
            protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: data-volume
              mountPath: /config/downloads
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: qbittorrent-pvc-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: qbittorrent-pvc-data
